# itemizer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.local.json
.vim/: coc-settings.json
src/: config.rs  data.rs  database_itemizer.rs  main.rs
