[package]
name = "itemizer"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
tesseract = "0.15"
chrono = "0.4"
image = "0.24"
regex = "1.10"
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
